--- a/Educación/Carrusel-educación.html
+++ b/Educación/Carrusel-educación.html
@@ -15,17 +15,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     
  <style>
-    /* RESET */
-    *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
-
-    body {
-      font-family: 'Hind', sans-serif;
-      background: #f5f5f5;
-      color: #4d5974;
-      padding: 20px;
-    }
-
-    h1 { text-align: center; margin-bottom: 24px; color: #333; }
+   :root {
+            --primary-blue: #1565c0;
+            --primary-green: #1ec773;
+            --gradient-primary: linear-gradient(45deg, #1565c0, #1ec773);
+        }
 
     /* Contenedor */
     .carousel-container {
@@ -69,73 +63,176 @@
     @media (max-width: 576px) { .col-card { flex: 0 0 100%; padding: 0 0.5rem; } }
 
     /* Tarjeta */
-    .icontec-card-link { display:block; color:inherit; text-decoration:none; width:100%; }
-    .icontec-card {
-      background:#fff; border-radius:8px; overflow:hidden; box-shadow:0 2px 8px rgba(0,0,0,0.08);
-      display:flex; flex-direction:column; width:100%;
-      transition: transform .25s ease, box-shadow .25s ease;
-      position: relative;
-    }
-    .icontec-card:hover { transform: translateY(-6px); box-shadow:0 10px 26px rgba(0,0,0,0.12); }
-
-    .icontec-card-img { width:100%; height:200px; object-fit:cover; display:block; border-radius:8px 8px 0 0; }
-    @media (max-width: 768px) { .icontec-card-img { height:220px; } }
-    @media (max-width: 576px) { .icontec-card-img { height:260px; } }
-
-    /* Etiqueta sobre la imagen: ahora está dentro del contenedor de imagen */
-    .icontec-card-img-container { position: relative; width:100%; overflow:hidden; }
-    .icontec-card-category {
-      position:absolute;
-      top:12px;
-      left:12px;
-      background:linear-gradient(135deg,#1ec773,#0fa958);
-      color:#fff;
-      padding:6px 10px;
-      font-size:.75rem;
-      font-weight:700;
-      border-radius:12px;
-      text-transform:uppercase;
-      box-shadow:0 2px 8px rgba(30,199,115,0.28);
-      z-index: 4;
-      display:inline-block;
-      line-height:1;
-    }
-
-    .icontec-card-overlay {
-      position:absolute; top:0; left:0; width:100%; height:100%;
-      background: rgba(0,0,0,0.6);
-      display:flex; align-items:center; justify-content:center;
-      opacity:0; pointer-events:none;
-      clip-path: circle(0% at 50% 0);
-      transition: clip-path .6s cubic-bezier(0.25,0.46,0.45,0.94), opacity .3s ease .1s;
-      z-index:3;
-      border-radius:8px 8px 0 0;
-    }
-    .icontec-card:hover .icontec-card-overlay { opacity:1; pointer-events:auto; clip-path: circle(120% at 50% 0); }
-    .icontec-card-overlay-title { color: #fff; font-size: 1.15rem; font-weight: 700; text-align: center; padding: 0 8px; }
-
-    .icontec-card-content { padding:12px; background:#e9f7fd; flex:1; display:flex; flex-direction:column; justify-content:flex-start; }
-    .icontec-card-title { font-size:1.05rem; font-weight:600; margin-bottom:6px; color:#222; }
-    .icontec-card-content p { margin:4px 0; font-size:.9rem; color:#333; }
-
-    .info-tags { display:flex; gap:8px; margin-bottom:8px; flex-wrap:wrap; }
-    .tag-modalidad, .tag-gratis { font-size:.75rem; font-weight:600; padding:4px 8px; border-radius:12px; color:#fff; }
-    .tag-modalidad { background:#1565c0; } .tag-gratis { background:#FF4841; }
-
-    .filter-course-card--buttons { margin-top:auto; text-align:center; }
-    .btn-compact {
-       background:#1ec773; 
-       color:#fff;
-        padding:6px 12px; 
-           font-size: .85rem;
-        border-radius:4px;
-         border:none;
-          font-weight:500;
-           display: inline-flex;
-       align-items: center;
-        gap: 4px;
-      transition: background .2s, transform .2s;
+  /* ESTILOS DE LAS CARDS MEJORADAS */
+        .icontec-card-link {
+            display: block;
+            text-decoration: none;
+            color: inherit;
+            height: 100%;
         }
+
+        .icontec-card {
+            position: relative;
+            overflow: hidden;
+            background: #fff;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            transition: transform .3s, box-shadow .3s, border-bottom .3s;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .icontec-card-link:hover .icontec-card {
+            transform: translateY(-8px) scale(1.02);
+            box-shadow: 0 12px 28px rgba(0,0,0,0.15);
+            border-bottom: 3px solid var(--primary-green);
+        }
+
+        .icontec-card-img-container {
+            position: relative;
+            width: 100%;
+            overflow: hidden;
+            height: 200px;
+        }
+
+        .icontec-card-img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+            border-radius: 12px 12px 0 0;
+            transition: filter .3s, transform .3s;
+        }
+
+        .icontec-card-link:hover .icontec-card-img {
+            filter: brightness(0.7) grayscale(10%);
+            transform: scale(1.05);
+        }
+
+        .icontec-card-overlay {
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            background: rgba(0,0,0,0.7);
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            pointer-events: none;
+            z-index: 2;
+            clip-path: circle(0% at 50% 0);
+            transition: clip-path .6s cubic-bezier(0.25,0.46,0.45,0.94), opacity .3s ease .1s;
+        }
+
+        .icontec-card-link:hover .icontec-card-overlay {
+            opacity: 1;
+            pointer-events: auto;
+            clip-path: circle(120% at 50% 0);
+        }
+
+        .icontec-card-overlay-title {
+            font-size: 1.15rem;
+            font-weight: 700;
+            text-align: center;
+            padding: 0 15px;
+        }
+
+        .icontec-card-category {
+            position: absolute;
+            top: 12px; left: 12px;
+            background: var(--gradient-primary);
+            color: #fff;
+            padding: 6px 12px;
+            font-size: .75rem;
+            font-weight: 600;
+            border-radius: 15px;
+            text-transform: uppercase;
+            box-shadow: 0 4px 12px rgba(30,199,115,0.3);
+            z-index: 3;
+        }
+
+        .icontec-card-content {
+            padding: 1.5rem;
+            text-align: left;
+            background-color: #fff;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .info-tags {
+            display: flex;
+            gap: 8px;
+            margin-bottom: 12px;
+            flex-wrap: wrap;
+        }
+
+        .tag-modalidad, .tag-gratis {
+            font-size: .75rem;
+            font-weight: 600;
+            padding: 4px 12px;
+            border-radius: 12px;
+            color: #fff;
+        }
+
+        .tag-modalidad { 
+            background: var(--primary-blue); 
+        }
+
+        .tag-gratis { 
+            background: #FF4841; 
+        }
+
+        /* TÍTULO MEJORADO - EVITA DESBORDAMIENTO */
+        .icontec-card-title {
+            font-size: 1.1rem;
+            font-weight: 700;
+            margin-bottom: 12px;
+            color: #222;
+            line-height: 1.3;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            min-height: 2.6em;
+        }
+
+        .icontec-card-content p {
+            margin: 6px 0;
+            font-size: .9rem;
+            color: #666;
+            font-weight: 400;
+        }
+
+        .filter-course-card--buttons {
+            margin-top: auto;
+            text-align: center;
+            padding-top: 1rem;
+        }
+
+        .btn-compact {
+            background: var(--gradient-primary);
+            color: #fff;
+            padding: 10px 20px;
+            font-size: .9rem;
+            border: none;
+            border-radius: 8px;
+            font-weight: 600;
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            transition: all .2s;
+            cursor: pointer;
+        }
+
+        .btn-compact:hover {
+            transform: scale(1.05);
+            box-shadow: 0 4px 12px rgba(21, 101, 192, 0.3);
+        }
+
 
     /* Ocultar flechas en móvil */
     @media (max-width: 767.98px) { .carousel-btn { display: none !important; } }
